# midnight-commander-macos

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: capture-tauri-evidence.sh  generate-mc-icon.py  verify-launch.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mc_title.rs  pty_registry.rs  resolve_mc.rs
tests/: run_tests.sh
