[package]
name = "midnight-commander"
version = "1.0.0"
description = "Midnight Commander macOS host"
authors = ["yolo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "midnight_commander_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
